# mmigrations

./: .gitignore  CMakeLists.txt  MigrationsMCDB.pro  README.md  abstractmigrationmanager.cpp  databasemanager.cpp  databasemanager.h  dbabstractmigrationmanager.cpp  dbabstractmigrationmanager.h  dbhelpers.cpp  dbhelpers.h  dbmigration.cpp  dbmigration.h  dbmigrationmanager.cpp  dbmigrationmanager.h  dbmigrationsdata.cpp  dbmigrationsdata.h  main.cpp  migration.cpp  migration.h  migrationmanager.h  migrationsdata.h  mmigrations.doxyfile  mmigrations.h  mmigrations.pri
connectionproviders/: connectionproviderbase.cpp  connectionproviderbase.h  connectionprovidersqlite.cpp  connectionprovidersqlite.h  connectionprovidersqlitecipher.cpp  connectionprovidersqlitecipher.h  connectionprovidersqlitesee.cpp  connectionprovidersqlitesee.h  dbconnectionproviderbase.cpp  dbconnectionproviderbase.h  dbconnectionprovidersqlite.cpp  dbconnectionprovidersqlite.h
example/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  dbmigrationsdata.cpp  dbmigrationsdata.h  example.pro  main.cpp
sqlitecipher/: .gitignore  build_sqlitecipherplugin.sh
sqlitesee/: .gitignore  smain.cpp  sqlitesee.json  sqlitesee.pro  sqlitesee_install.sh
sqlitesee/sqlitesee-sources/: .gitignore
tst_mmigrations/: CMakeLists.txt  tst_migrations.cpp  tst_migrations.pro
